Fri Oct  7 19:18:33 2016  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/*.c, ext/win32ole/win32ole.h: use RB_INT2FIX instead of
	  INT2FIX, and so on.

Fri Oct  7 14:18:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* basictest/test.rb: Adjust spaces in class declarations
	  with inheritance. [fix GH-1227] Patch by @adrfer
	* lib/irb/*: ditto.
	* lib/prime.rb: ditto.
	* lib/shell/builtin-command.rb: ditto.
	* object.c: ditto.
	* sample/*.rb: ditto.
	* test/-ext-/method/test_arity.rb: ditto.

Thu Oct  6 17:29:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_require_safe): SyntaxError created by the parser just
	  has the message and needs to set up the backtrace.
	  [ruby-core:77491] [Bug #12811]

	* load.c (rb_load_internal0): load/require is not the main
	  script.

Thu Oct  6 13:35:15 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enum.c: [DOC] Improve doc [ci-skip]

Thu Oct  6 11:38:14 2016  Chris Jones  <chris@christopherjones.us>

	* ext/readline/extconf.rb: Update error message with correct words.
	  [fix GH-1453][ci skip] Patch by @magikid

Thu Oct  6 11:01:49 2016  Tieg Zaharia  <tieg.zaharia@gmail.com>

	* lib/uri/common.rb (WEB_ENCODINGS_): Update URI::WEB_ENCODINGS_
	  hash, and fix documented command to grab it.  [Fix GH-1430]

Thu Oct  6 10:37:13 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enum.c: Add reduce/inject alias note.
	  [fix GH-1400][ci skip] Patch by @getaaron

Thu Oct  6 10:30:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (update_coverage): check coverage values, and ignore
	  non-fixnum values.

Thu Oct  6 09:19:21 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): use dedicated macro RB_INTEGER_TYPE_P.

Wed Oct  5 18:02:44 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http/response.rb: Improve document readability.
	  [fix GH-1411][ci skip] Patch by @stz-seongheon

Wed Oct  5 15:43:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
